jswt-semantics/src/globals/snapshots/jswt_semantics__globals__test__global_resolver_resolves_class_binding.snap
---
source: jswt-semantics/src/globals/mod.rs
expression: resolver

---
GlobalResolver {
    symbols: GlobalSymbolsResolver {
        symbols: SymbolTable {
            scopes: [],
            table: {
                Span {
                    file: "program",
                    module: "root",
                    start: 0,
                    end: 0,
                }: Scope {
                    symbols: {
                        "doSomething": Function(
                            FunctionBinding {
                                params: [],
                                returns: Object(
                                    Reference(
                                        "Array",
                                    ),
                                ),
                            },
                        ),
                        "test": Function(
                            FunctionBinding {
                                params: [],
                                returns: Void,
                            },
                        ),
                    },
                },
            },
        },
        errors: [],
    },
    bindings: GlobalBindingsResolver {
        stack: [],
        bindings: BindingsTable {
            table: {
                "Array": Class(
                    ClassBinding {
                        fields: [
                            Field {
                                name: "a",
                                index: 0,
                                size: 4,
                            },
                            Field {
                                name: "b",
                                index: 1,
                                size: 4,
                            },
                        ],
                    },
                ),
            },
        },
        errors: [],
    },
}
