jswt-semantics/src/globals/snapshots/jswt_semantics__globals__test__global_resolver_resolves_function_bindings.snap
---
source: jswt-semantics/src/globals/mod.rs
expression: resolver

---
GlobalResolver {
    symbols: GlobalSymbolsResolver {
        symbols: SymbolTable {
            scopes: [],
            table: {
                Span {
                    file: "program",
                    module: "root",
                    start: 0,
                    end: 0,
                }: Scope {
                    symbols: {
                        "Array": Class(
                            ClassBinding {
                                name: "Array",
                                fields: [],
                            },
                        ),
                        "test": Function(
                            FunctionBinding {
                                params: [
                                    Primitive(
                                        I32,
                                    ),
                                    Primitive(
                                        I32,
                                    ),
                                ],
                                returns: Void,
                            },
                        ),
                        "test2": Function(
                            FunctionBinding {
                                params: [],
                                returns: Object(
                                    Reference(
                                        "Array",
                                    ),
                                ),
                            },
                        ),
                    },
                },
            },
        },
        stack: [],
        errors: [],
    },
}
